<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/checkbox"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:padding="10sp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/rishab_singh_is_learning_android_development"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20sp"
        android:text="@string/how_is_the_android_development_journey_is_going"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">

     <Button
         android:id="@+id/btnfeedback"
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20sp"
         android:layout_marginEnd="20sp"
         android:layout_weight="@integer/material_motion_duration_long_1"
         android:backgroundTint="#CF372C"
         android:text="@string/feedback"
         android:textColor="#FFF3E0"
         tools:ignore="VisualLintButtonSize" />

     <Button
         android:id="@+id/btngood"
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="20sp"
         android:layout_marginRight="10dp"
         android:layout_weight="@integer/material_motion_duration_long_1"
         android:backgroundTint="#03A9F4"
         android:text="@string/too_good"
         android:textColor="#4A148C"
         tools:ignore="VisualLintButtonSize" />
 </LinearLayout>

</LinearLayout>